Problem is wrong image chosen fixed alignment

--- a/Himanshu_Sharma/shopping_element/assets/styles/main.css
+++ b/Himanshu_Sharma/shopping_element/assets/styles/main.css
@@ -29,7 +29,7 @@ body{
 }
 
 .item-img-carrot{
-    width: 20%;
+    width: 12%;
     background: url('../images/images.jfif');
     background-size: cover;
 }
@@ -39,7 +39,7 @@ body{
     flex-direction: column;
     justify-content: space-around;
     font-size: 2.4rem;
-    width: 60%;
+    width: 80%;
     align-items: center;
 }
 
@@ -54,7 +54,7 @@ body{
 }
 
 .item-img-cauliflower{
-    width: 20%;
+    width: 12%;
     background: url('../images/p7_Broccoli_HH1812_gi905351392.jpg');
     background-size: cover;
 }
